--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -2,3 +2,13 @@ FROM php:8.1
 
 # DockerイメージからComposerをインストールする
 COPY --from=composer /usr/bin/composer /usr/bin/composer
+
+# 必要なパッケージをインストールする
+RUN apt-get update
+RUN apt-get install -y \
+    zip \
+    unzip \
+    git
+
+# PHP拡張をインストールする
+RUN docker-php-ext-install zip
