--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "library",
     "autoload": {
         "psr-4": {
-            "Proya\\LaravelMiddleware\\": "src/"
+            "Proya\\Laravel\\": "src/"
         }
     },
     "authors": [
@@ -11,5 +11,8 @@
             "name": "proya"
         }
     ],
-    "require": {}
+    "require": {
+        "illuminate/support": "^9",
+        "illuminate/http": "^9"
+    }
 }
