--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         }
     ],
     "require": {
+        "php": "^8.1",
         "illuminate/support": "^9",
         "illuminate/http": "^9"
     },
