--- a/docker/php8.1/Dockerfile
+++ b/docker/php8.1/Dockerfile
@@ -8,7 +8,8 @@ RUN apt-get update
 RUN apt-get install -y \
     zip \
     unzip \
-    git
+    git \
+    libzip-dev
 
 # PHP拡張をインストールする
 RUN docker-php-ext-install zip
