--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,13 @@
         }
     ],
     "require": {
-        "php": "^8.1",
-        "illuminate/support": "^9",
-        "illuminate/http": "^9"
+        "php": "^7.4 || ^8.1",
+        "illuminate/support": "^6 || ^9",
+        "illuminate/http": "^6 || ^9"
     },
     "require-dev": {
-        "mockery/mockery": "^1.6",
-        "phpunit/phpunit": "^10.5"
+        "mockery/mockery": "^1",
+        "phpunit/phpunit": "^9 || ^10"
     },
     "autoload": {
         "psr-4": {
