--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -5,3 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "this is pen"
+      - uses: actions/checkout@4
+      -run:
+            ls -al
+            cd .github/workflows/
+            ls -al
