--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "this is pen"
-      - uses: actions/checkout@4
+      - uses: actions/checkout@v4
       - run:
           ls -al
           cd .github/workflows/
