--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -1,7 +1,9 @@
 name: learn-github-actions
+
 on:
-  push
-  workflow_dispatch
+  push:
+  workflow_dispatch:
+
 jobs:
   check-bats-version:
     runs-on: ubuntu-latest
