--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  test-with-php-7.4:
+  test-with-php-7-4:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
