--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     ],
     "require": {
         "php": "^7.4 || ^8.0",
-        "illuminate/http": "^6 || ^7 || ^8 || ^9 || ^10 || ^11",
-        "illuminate/support": "^6 || ^7 || ^8 || ^9 || ^10 || ^11"
+        "illuminate/http": "^6 || ^7 || ^8 || ^9 || ^10 || ^11 || ^12",
+        "illuminate/support": "^6 || ^7 || ^8 || ^9 || ^10 || ^11 || ^12"
     },
     "require-dev": {
         "mockery/mockery": "^1",
